# ur_robot

./: ReadMe.md
ur_description/: CMakeLists.txt  package.xml
ur_description/cfg/: view_robot.rviz
ur_description/launch/: ur3_ft_upload.launch  view_ur3_robotiq.launch
ur_description/urdf/: ur3_with_robotiq.urdf.xacro
ur_moveit_config/: .setup_assistant  package.xml
ur_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur3.srdf
ur_moveit_config/launch/: demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur3_moveit_controller_manager.launch.xml
ur_planning/: CMakeLists.txt  package.xml
ur_planning/launch/: ur3_planning.launch
ur_planning/scripts/: joint_space_planning_demo.py  moveit_ik_demo.py  moveit_obstacles_demo.py  moveit_pick_and_place_demo.py  python_interface_tutorial.py
ur_planning/src/: cpp_interface.cpp  ur_pick_place_demo.cpp
